--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,9 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 
 add_library(gazr SHARED 
             src/head_pose_estimation.cpp 
-            src/face_reconstruction.cpp)
+            src/face_reconstruction.cpp
+            src/find_eye_center.cpp
+            src/helpers.cpp)
 target_link_libraries(gazr dlib::dlib ${OpenCV_LIBRARIES})
 
 if(WITH_ROS)
