Isolated the face reconstruction code into a separate class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,9 @@ if(DEBUG_OUTPUT)
 endif()
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_library(gazr SHARED src/head_pose_estimation.cpp)
+add_library(gazr SHARED 
+            src/head_pose_estimation.cpp 
+            src/face_reconstruction.cpp)
 target_link_libraries(gazr dlib::dlib ${OpenCV_LIBRARIES})
 
 if(WITH_ROS)
