[cmake] Use dlib::dlib_shared for target_link_libraries
Avoid "CMake Warning" that 'dlib_INCLUDE_DIRS' and 'dlib_LIBRARIES' are deplicated.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,6 @@ set(VERSION ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPAC
 add_definitions(-std=c++11 -DGAZR_VERSION=${VERSION})
 
 find_package(dlib REQUIRED)
-include_directories(${dlib_INCLUDE_DIRS})
 
 option(DEBUG_OUTPUT "Enable debug visualizations" OFF)
 option(WITH_TOOLS "Compile sample tools" OFF)
@@ -59,7 +58,7 @@ endif()
 include_directories(${OpenCV_INCLUDE_DIRS})
 
 add_library(gazr SHARED src/head_pose_estimation.cpp)
-target_link_libraries(gazr ${dlib_LIBRARIES} ${OpenCV_LIBRARIES})
+target_link_libraries(gazr dlib::dlib_shared ${OpenCV_LIBRARIES})
 
 if(WITH_ROS)
 
