Replace deprecated CMake ${dlib_LIBRARIES}
Silence the following CMake warning:

    CMake Warning at /usr/lib/x86_64-linux-gnu/cmake/dlib/dlibConfig.cmake:42 (message):
      The variable 'dlib_LIBRARIES' is deprecated! Instead, simply use
      target_link_libraries(your_app dlib::dlib).  See
      http://dlib.net/examples/CMakeLists.txt.html for an example.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ endif()
 include_directories(${OpenCV_INCLUDE_DIRS})
 
 add_library(gazr SHARED src/head_pose_estimation.cpp)
-target_link_libraries(gazr ${dlib_LIBRARIES} ${OpenCV_LIBRARIES})
+target_link_libraries(gazr dlib::dlib ${OpenCV_LIBRARIES})
 
 if(WITH_ROS)
 
